--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,22 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+@media screen and (min-width: 900px) {
+    ion-card#card-login.card {
+      max-width: 30%;
+    }
+    .card {
+      margin-left: calc(100% - 75%) !important;
+    }
+  }
+.card-md {
+    margin: 10px;
+    border-radius: 2px;
+    width: calc(100% - 50%);
+    font-size: 1.4rem;
+    background: #fff;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
