--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -1,3 +1,9 @@
-list {
-
+button.item-cover {
+    left: 0;
+    top: 0;
+    position: absolute;
+     width: 0%;
+    height: 100%;
+    background: transparent;
+    cursor: pointer;
 }
