Add input binding to list component and add list entity

--- a/src/components/list/list.html
+++ b/src/components/list/list.html
@@ -4,7 +4,7 @@
               <ion-icon name="close-circle"></ion-icon>
             </button>
     <ion-item>
-      <ion-input type="text" placeholder="List title" [(ngModel)]="title"></ion-input>
+      <ion-input type="text" placeholder="List title" [(ngModel)]="list.title"></ion-input>
     </ion-item>
   </ion-card-header>
   <ion-card-content>
